--- a/SchoolApp/SchoolApp/SchoolApp.csproj
+++ b/SchoolApp/SchoolApp/SchoolApp.csproj
@@ -31,5 +31,11 @@
     <EmbeddedResource Update="Logged.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Pages\ModifyUser.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Pages\View1.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
