--- a/SchoolApp/SchoolApp/SchoolApp.csproj
+++ b/SchoolApp/SchoolApp/SchoolApp.csproj
@@ -31,11 +31,12 @@
     <EmbeddedResource Update="Logged.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Pages\ModifyUser.xaml">
+    <EmbeddedResource Update="ModifyUserPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Pages\View1.xaml">
-      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
-    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Pages\" />
   </ItemGroup>
 </Project>
