--- a/SchoolApp/SchoolApp.Android/SchoolApp.Android.csproj
+++ b/SchoolApp/SchoolApp.Android/SchoolApp.Android.csproj
@@ -103,13 +103,22 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Resources\drawable\" />
+    <AndroidResource Include="Resources\drawable\edit.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SchoolApp\SchoolApp.csproj">
       <Project>{ED2AF749-4DCB-4BEF-A4A4-6B49620F6221}</Project>
       <Name>SchoolApp</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\reload.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\delete.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\addUser.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
